K8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: eloup
  labels:
    app: eloup
    app.kubernetes.io/managed-by: eloup-wizard
