K8s/service-web.yaml
apiVersion: v1
kind: Service
metadata:
  name: eloup-web
  namespace: eloup
  labels:
    app: eloup-web
spec:
  type: ClusterIP
  selector:
    app: eloup-web
  ports:
    - name: http
      port: 3000
      targetPort: 3000
      protocol: TCP
